--- a/project-antique-games-blog.html
+++ b/project-antique-games-blog.html
@@ -114,6 +114,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					<!-- Blog -->
 
 					<p>Games have been around for eons and like much of history, it is interesting to learn about the games people played around the world and from long ago.
+						Games have been around for as long as humans have walked the earth. Much like data structures and algorithms, to be able 
+						to create or play a game, there is a set of logic and structure to how the characters of the game are able to interact with each other in order to play out the game.
                     </p>
 
 					<p>These <h10><a href="https://sites.google.com/site/boardandpieces/list-of-games">Antique Games</a></h10> are the inspiration to the data structures and 
