--- a/project-fashion-fabricator-blog.html
+++ b/project-fashion-fabricator-blog.html
@@ -108,7 +108,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 
 					<p>Written by</p>
 					<h3><a href="index.html"> Carissa O'Connell</a></h3>
-					<p>July 10, 2023; Updated: Jan 2024</p>
+					<p>July 2023; Updated: Jan 2024</p>
 
 					<!-- Blog -->
 
