--- a/blog-Projects.html
+++ b/blog-Projects.html
@@ -216,8 +216,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 										<div class="text text-2 pt-2 mt-3">
 											<span class="category mb-3 d-block"><a href="blogs-web-development.html">Web Development</a></span>
 				              <h3 class="mb-4"><a href="project-word-wizard-blog.html">Word Wizard</a></h3>
-				              <p class="mb-4">The purpose of the Word Wizard program is to help those who love learning languages, or are interested in learning a language,
-								to play on words.</p>
+				              <p class="mb-4">The purpose of the Word Wizard program is to help those who love learning languages, or are interested in learning a language, and enjoy plays on words.</p>
 				            <!-- Authors Info -->
 								<div class="author mb-4 d-flex align-items-center">
 									<a href="index.html" class="img" style="background-image: url(images/ocean.jpg);"></a>
