--- a/blog13.html
+++ b/blog13.html
@@ -91,8 +91,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					<div class="col-md-8 text text-center">
 						<div class="desc">
 							<h7 class="subheading"><b>CSF's and KPI's</b></h7>
-							<p><a href="index.html" class="btn-custom mr-2">Home</a></p>
-							<a href="blog-MainIndex.html" class="btn-custom mr-2">Blog</a></p>
+							<p><h9><a href="index.html" class="btn-custom mr-2">Home</a></h9></p>
+							<p><h9><a href="blog-MainIndex.html" class="btn-custom mr-2">Blogs</a></h9></p>
 						</div>
 					</div>
 				</div>
