--- a/index.html
+++ b/index.html
@@ -105,9 +105,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
-						   					<h1>Carissa O'Connell <br> Software Developer</h1>
-						   					<!--<h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2>-->
-											   <p><a class="btn btn-primary btn-learn" href="files/Software-Engineer-Resume 01.pdf" download>Download Resume <i class="icon-download4"></i></a></p>
+											<h1>Data Structures</h1>
+												<p><a class="btn btn-primary btn-learn" href="https://github.com/carissaoconnell/Data-Structures">View Github Data Structures <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -121,8 +120,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1>My portfolio</h1>
-												<p><a class="btn btn-primary btn-learn" href="https://github.com/carissaoconnell/Data-Structures">View Portfolio <i class="icon-briefcase3"></i></a></p>
+											<h1>Carissa O'Connell <br> Software Developer</h1>
+											<p><a class="btn btn-primary btn-learn" href="files/Software Engineer Resume - Github.pdf" download>Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
