--- a/project-health-map-blog.html
+++ b/project-health-map-blog.html
@@ -91,9 +91,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					<div class="col-md-8 text text-center">
 						<div class="desc">
 							<!-- Topic -->
-							<h8 class="subheading">Health Map</h8>
-							<p><h10><a href="index.html" class="btn-custom mr-2">Home</a></h10></p>
-							<p><h10><a href="blog-MainIndex.html" class="btn-custom mr-2">Blogs</a></h10></p>
+							<h7 class="subheading"><b>Health Map</b></h7>
+							<p><h9><a href="index.html" class="btn-custom mr-2">Home</a></h9></p>
+							<p><h9><a href="blog-MainIndex.html" class="btn-custom mr-2">Blogs</a></h9></p>
 						</div>
 					</div>
 				</div>
