--- a/project-the-aloha-thread-blog.html
+++ b/project-the-aloha-thread-blog.html
@@ -91,9 +91,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					<div class="col-md-8 text text-center">
 						<div class="desc">
 							<!-- Topic -->
-							<h1 class="subheading">The Aloha Thread</h1>
-							<p><a href="index.html" class="btn-custom mr-2">Home</a></p>
-							<a href="blog-MainIndex.html" class="btn-custom mr-2">Blogs</a></p>
+							<h7 class="subheading"><b>The Aloha Thread</b></h7>
+							<p><h9><a href="index.html" class="btn-custom mr-2">Home</a></h9></p>
+							<p><h9><a href="blog-MainIndex.html" class="btn-custom mr-2">Blogs</a></h9></p>
 						</div>
 					</div>
 				</div>
@@ -109,16 +109,20 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 
 					<p>Written by</p>
 					<h3><a href="index.html"> Carissa O'Connell</a></h3>
-					<p>Jan 2020; Updated: Jan 2023</p>
+					<p>Jan 2020; Updated: March 2024</p>
 
 					<!-- Blog -->
 
-					<p>Helping to develop a website has shown me how important it is to understand layouts and UI/UX design.
-						I also learned about API's and  their importance in connecting different applications together and feeding real time
-					information onto the page; such as comments.</p>
+					<p>Helping to develop a website has shown me how important it is to understand and implement UI/UX design.
+						I also learned about API's and their importance in connecting different applications together and feeding real time
+					information onto the page.</p>
                     </p>
 
-					<p><h10><b><a href="alohathread.github.io">The Aloha Thread</a></b></h10></p>
+					<p>Check out the website: <h10><b><a href="https://thealohathread.github.io">The Aloha Thread</a></b></h10></p>
+
+					<h9><b>Screenshots:</b></h9>
+					<p><img src="images/the-aloha-thread/home01.png" alt="the aloha thread home" class="img-fluid"></p>
+					<p><img src="images/the-aloha-thread/home02.png" alt="the aloha thread home" class="img-fluid"></p>
 
 					<h9><b>UI/UX designs</b></h9>
 
