--- a/project-antique-games-blog.html
+++ b/project-antique-games-blog.html
@@ -91,9 +91,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					<div class="col-md-8 text text-center">
 						<div class="desc">
 							<!-- Topic -->
-							<h7 class="subheading">Antique Games</h7>
-							<p><a href="index.html" class="btn-custom mr-2">Home</a></p>
-							<a href="blog-MainIndex.html" class="btn-custom mr-2">Blogs</a></p>
+							<h7 class="subheading"><b>Antique Games</b></h7>
+							<p><h9><a href="index.html" class="btn-custom mr-2">Home</a></h9></p>
+							<p><h9><a href="blog-MainIndex.html" class="btn-custom mr-2">Blogs</a></h9></p>
 						</div>
 					</div>
 				</div>
