--- a/project-fashion-fabricator-blog.html
+++ b/project-fashion-fabricator-blog.html
@@ -92,8 +92,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						<div class="desc">
 							<!-- Topic -->
 							<h7 class="subheading"><b>Fashion Fabricator</b></h7>
-							<p><a href="index.html" class="btn-custom mr-2">Home</a></p>
-							<a href="blog-MainIndex.html" class="btn-custom mr-2">Blogs</a></p>
+							<p><h9><a href="index.html" class="btn-custom mr-2">Home</a></h9></p>
+							<p><h9><a href="blog-MainIndex.html" class="btn-custom mr-2">Blogs</a></h9></p>
 						</div>
 					</div>
 				</div>
