--- a/blog-MainIndex.html
+++ b/blog-MainIndex.html
@@ -120,7 +120,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								<div class="ml-3 info">
 									<span>Written by</span>
 									<h3><a href="index.html"> Carissa O'Connell</a></h3>
-									<p>Dec 20, 2022</p>
+									<p>Dec 2022</p>
 								</div>
 							</div>
 				              <div class="meta-wrap align-items-center">
@@ -518,14 +518,16 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 
 			<!-- Side bar area -->
 	    	<div class="col-lg-4 sidebar ftco-animate">
+				<!-- 
 	            <div class="sidebar-box">
-	              <form action="#" class="search-form">
-	                <div class="form-group">
-						<span i class="glyphicon glyphicon-search"></i></span>
-	                  <input type="text" class="form-control" placeholder="Type a keyword">
-	                </div>
-	              </form>
+					<form action="#" class="search-form">
+						<div class="form-group">
+							<span i class="glyphicon glyphicon-search"></i></span>
+						  <input type="text" class="form-control" placeholder="Type a keyword">
+						</div>
+					</form>
 	            </div>
+				-->
 	            <div class="sidebar-box ftco-animate">
 	            	<h3 class="sidebar-heading">Categories</h3>
 					<ul class="categories">
@@ -594,6 +596,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 				  </ul>
 	            </div>
 
+				<!-- 
 				<div class="sidebar-box subs-wrap img" style="background-image: url(images/bg_1.jpg);">
 					<div class="overlay"></div>
 						<h3 class="mb-4 sidebar-heading">Newsletter</h3>
@@ -606,10 +609,12 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							   </div>
 						  </form>
 					</div>
+				
 
 	            <div class="sidebar-box ftco-animate">
 	            	<h3 class="sidebar-heading">Archives</h3>
 	            </div>
+				-->
 
 				<!-- Side note -->
 	            <div class="sidebar-box ftco-animate">
@@ -748,6 +753,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="jsElen/google-map.js"></script>
   <script src="jsElen/main.js"></script>
+  <script src="js/searchbar.js"></script>
     
   </body>
 </html>
