--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								</span>
 								<div class="desc">
 									<h3>Data Structures and Algorithms</h3>
-									<p>Utilize algorithms to optimize space and time</p>
+									<p>Continuously learning about algorithms in order to optimize space and time on how the program runs</p>
 								</div>
 							</div>
 						</div>
@@ -856,6 +856,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 			</section>
 			<!-- End Recent Blogs -->
 
+			<!--
 			<section class="colorlib-contact" data-section="contact" id="contact">
 				<div class="colorlib-narrow-content">
 					<div class="row">
@@ -914,7 +915,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 										</div>
 									</form>
 								</div>
-								
+							-->
 							</div>
 						</div>
 					</div>
