--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Carissa Template</title>
+	<title>Carissa Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -62,7 +62,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpeg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Carissa O'Connell</a></h1>
-				<span class="position"><a href="#">Software Developer</a> from Hawaii </span>
+				<span class="position"><a href="index.html">Software Developer</a> currently in Florida </span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -75,7 +75,6 @@
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
 						<li><a href="#" data-nav-section="work">Projects</a></li>
 						<li><a href="#" data-nav-section="blog">Blogs</a></li>
-						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
 			</nav>
@@ -88,7 +87,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					<li><a href="#"><i class="icon-facebook2"></i></a></li>
 					<li><a href="#"><i class="icon-twitter2"></i></a></li>
 					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/carissa-oconnell/"><i class="icon-linkedin2"></i></a></li>
 				</ul>
 			</div>
 
@@ -120,7 +119,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-											<h1>Carissa O'Connell <br> Software Developer</h1>
+											<h1>Carissa O'Connell <br> Full Stack Software Developer</h1>
 											<p><a class="btn btn-primary btn-learn" href="files/Software Engineer Resume - Github.pdf" download>Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
@@ -177,14 +176,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									</div>
 								</div>
 							</div>
-							<div class="row">
-								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-									<div class="hire">
-										<h2>Want to see if your idea could be a program? <br>Trying to come up with a function to a program?</h2>
-										<a href="#contact" class="btn-hire">Let's chat!</a>
-									</div>
-								</div>
-							</div>
+
+
+
 						</div>
 					</div>
 				</div>
@@ -380,9 +374,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="progress-wrap">
 								<h3>Javascript</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="40"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:40%">
-								    <span>40%</span>
+								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="45"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:45%">
+								    <span>45%</span>
 								  	</div>
 								</div>
 							</div>
@@ -391,9 +385,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="progress-wrap">
 								<h3>SQL</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="35"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:35%">
-								    <span>35%</span>
+								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="45"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:45%">
+								    <span>45%</span>
 								  	</div>
 								</div>
 							</div>
@@ -439,24 +433,27 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingOne">
 									        <h4 class="panel-title">
-									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Bachelors Degree in Software Development
+									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Bachelors Degree in Computer Science
 									            </a>
 									        </h4>
 									    </div>
 									    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 									         <div class="panel-body">
+												<h10><b>Degree Focus: Software Development</b></h10>
 									            <div class="row">
 										      		<div class="col-md-6">
-										      			<p>My studies include coding in: </p>
+										      			<p>My studies include: </p>
 														<ul>
-															<li>C++</li>
-															<li>Java</li>
-															<li>HTML</li>
-															<li>CSS</li>
-															<li>Javascript</li>
-															<li>SQL</li>
-															<li>Android app programming</li>
-															<li>Data Structures and Algorithms</li>
+															<li>Software Development</li>
+															<li>Software Integration, Configuration, and Testing</li>
+															<li>Object Oriented Programming</li>
+															<li>Data Structure and Algorith Analysis</li>
+															<li>Database Design and Architecture</li>
+															<li>Applications in Information Security</li>
+															<li>Information System Analysis and Design</li>
+															<li>Microcomputer Applications</li>
+															<li>App Development for Mobile Devices</li>
+															<li>Web Development</li>
 														</ul>
 										      		</div>
 										      		<div class="col-md-6">
@@ -474,7 +471,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									    </div>
 									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 									        <div class="panel-body">
-									            <p>Early Childhood Education</p>
+												<h10><b>Degree Focus: Early Childhood Education</b></h10>
 												<p>My studies include:</p>
 													<ul>
 														<li>Early Childhood Development Theories</li>
@@ -816,8 +813,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								<div class="desc">
 									<span><small>Nov 2022 </small> | <small> Software </small> | <small> <i class="icon-bubble3"></i> 0</small></span>
 									<h3><a href="blog01.html">Software Methodologies</a></h3>
-									<p>By understanding each type of methodolgy, it helps to determine
-										which methodology could work best for the team and project. </p>
+									<p>By understanding each type of methodolgy, it helps to determine which methodology could work best for the team and project. </p>
 								</div>
 							</div>
 						</div>
@@ -829,7 +825,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								<div class="desc">
 									<span><small>Dec 2020 </small> | <small> Data Structures and Algorithms </small> | <small> <i class="icon-bubble3"></i> 0</small></span>
 									<h3><a href="blog03.html">Data Algorithms</a></h3>
-									<p>ata Algorithms are a set of instructions used to solve a specific problem. Examples of Data Algorithms include search algorithms, sorting algorithms, and graph algorithms.</p>
+									<p>Data Algorithms are a set of instructions used to solve a specific problem. Examples of Data Algorithms include search algorithms, sorting algorithms, and graph algorithms.</p>
 								</div>
 							</div>
 						</div>
