--- a/project-the-aloha-thread-blog.html
+++ b/project-the-aloha-thread-blog.html
@@ -51,7 +51,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpeg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Carissa O'Connell</a></h1>
-				<span class="position"><a href="#">Software Developer</a> from Hawaii </span>
+				<span class="position"><a href="index.html">Full Stack Software Developer</a> currently in Florida </span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -64,22 +64,21 @@
 						<li><a href="index.html" data-nav-section="experience">Experience</a></li>
 						<li><a href="blog-Projects.html" data-nav-section="projects">Projects</a></li>
 						<li class="active"><a href="blog-MainIndex.html" data-nav-section="blog">Blogs</a></li>
-						<li><a href="index.html" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
 			</nav>
 
 			<div class="colorlib-footer">
-				<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright <script>document.write(new Date().getFullYear());</script> All rights reserved. Made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span></small></p>
-				<ul>
-					<li><a href="#"><i class="icon-facebook2"></i></a></li>
-					<li><a href="#"><i class="icon-twitter2"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-				</ul>
+					<ul>
+						<li><a href="mailto:modern.program.geek@gmail.com"><i class="icon-mail"></i></a></li>
+						<li><a href="#"><i class="icon-instagram"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/carissa-oconnell/"><i class="icon-linkedin2"></i></a></li>
+					</ul>
 			</div>
+
+			<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+				Copyright <script>document.write(new Date().getFullYear());</script> All rights reserved. Made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span></small></p>
 
 		</aside>
 		<!-- END COLORLIB-ASIDE -->
