--- a/blogs-sql.html
+++ b/blogs-sql.html
@@ -101,6 +101,7 @@
 				<div class="row">
                     <h1>Sorry for the mess. We are working on getting this page updated as soon as possible. Thank you for your patience!</h1>
                     <h2>Currently, the blogs are located at <a href="blog-MainIndex.html">Blogs</a></h2>
+					<h8><b><a href="https://github.com/carissaoconnell/sql">Check out my SQL projects!</a></b></h8>
 					<div class="col-lg-8">
 	    				<div class="row">
 
