--- a/blogs-data-structures-and-algorithms.html
+++ b/blogs-data-structures-and-algorithms.html
@@ -102,7 +102,7 @@
 				<div class="row">
                     <h1>Sorry for the mess. We are working on getting this page updated as soon as possible. Thank you for your patience!</h1>
                     <h2>Currently, the blogs are located at <a href="blog-MainIndex.html">Blogs</a></h2>
-					<h8><b><a href="https://github.com/carissaoconnell/Data-Structures">Check out our code on Data Structures and Algorithms</a></b></h8>
+					<h8><b><a href="https://github.com/carissaoconnell/Data-Structures">Check out my codes on Data Structures and Algorithms!</a></b></h8>
 					<div class="col-lg-8">
 	    				<div class="row">
 
