--- a/index.html
+++ b/index.html
@@ -154,25 +154,26 @@
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 									<div class="services color-1">
 										<span class="icon2"><i class="icon-bulb"></i></span>
-										<h3>Software Development</h3>
+										<h3><a href="blogs-software.html">Software Development</a></h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 									<div class="services color-2">
 										<span class="icon2"><i class="icon-globe-outline"></i></span>
-										<h3>Web Design</h3>
+										<h3><a href="https://github.com/carissaoconnell/Javascript">Javascript</a></h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
 									<div class="services color-3">
 										<span class="icon2"><i class="icon-data"></i></span>
-										<h3>SQL</h3>
+										<h3><a href="https://github.com/carissaoconnell/sql">SQL</a></h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInBottom">
 									<div class="services color-4">
-										<span class="icon2"><i class="icon-phone3"></i></span>
-										<h3>Data Algorithms</h3>
+										<!--  <span class="icon2"><i class="icon-phone3"></i></span>  -->
+										<span class="icon2"><i class="icon-cog"></i></span>
+										<h3><a href="https://github.com/carissaoconnell/Data-Structures">Data Structures & Algorithms</a></h3>
 									</div>
 								</div>
 							</div>
@@ -223,7 +224,7 @@
 								</span>
 								<div class="desc">
 									<h3>Versatility</h3>
-									<p>Methods for the programs are designed to have reusable codes</p>
+									<p>Functions for the programs are designed to have reusable codes</p>
 								</div>
 							</div>
 						</div>
