--- a/index.html
+++ b/index.html
@@ -729,11 +729,11 @@
 						</div>
 						<!-- Article 5 -->
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/galaxy.jpg);">
+							<div class="project" style="background-image: url(images/tech/sql04.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="project-constellations-app.html">Constellations</a></h3>
-										<span>Wear Os</span>
+										<h3><a href="blog08.html">Joins in SQL</a></h3>
+										<span>Websites</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> </a></span>
