--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 											data structures, developing programs, software testing, and information management strategies everyday. 
 											My studies include utilizing data structures and algorithms in 
 											Java and C++, as well as SQL, HTML, CSS, and Javascript just to name a few.</p>
-										<p>I enjoy developing programs related to healthcare, learning languages, and the arts such as sewing, architecture, and painting.</p>
+										<p>I enjoy developing programs related to healthcare, finances, learning languages, <a href="project-antique-games-blog.html">board games</a>, and the arts such as sewing and architecture.</p>
 									</div>
 								</div>
 							</div>
