--- a/project-fashion-fabricator-blog.html
+++ b/project-fashion-fabricator-blog.html
@@ -113,6 +113,9 @@
 					<!-- Blog -->
 
 					<p>Helping to develop a website and app for the Fashion Fabricator has shown me how important it is to understand layouts and UI/UX design.
+						The objective of this app was to allow users to simply custom sewing patterns based on their own measurements. The app would take in the user's measurements
+						and then calcuate the appropriate size each dimension should either be increased or decreased by. The program is originally designed to 
+						create sewing patterns for very simple timeless garments meant to be used for many seasons.
                     </p>
 
 					<h9><b>App page</b></h9>
