--- a/blog-Projects.html
+++ b/blog-Projects.html
@@ -122,6 +122,7 @@
 						<li><h9><b>SQL Projects</b></h9></li>
 							<ul>
 								<li><h10><a href="#employeemanagmentsystem">Employee Management System</a></h10></li>
+								<li><h10><a href="#librarymanagementsystem">Library Management System</a></h10></li>
 							</ul>
 	
 						<li><h9><b>Java Projects</b></h9></li>
@@ -179,13 +180,13 @@
 							<!-- Second Blog -->
 			    			<div class="col-md-6">
 			    				<div class="blog-entry ftco-animate">
-										<a href="#" class="img img-2" style="background-image: url(images/sewing-materials.jpg);"></a>
+										<a href="#" class="img img-2" style="background-image: url(images/books.jpg);"></a>
 										<div class="text text-2 pt-2 mt-3">
 											<!-- tag -->
-											<span class="category mb-3 d-block"><a href="blogs-apps.html">Apps</a></span>
+											<span class="category mb-3 d-block"><a href="blogs-sql.html">SQL</a></span>
 											<!-- blog title -->
-				              <h3 class="mb-4" id="fashionfabricator"><a href="project-fashion-fabricator-blog.html">Fashion Fabricator</a></h3>
-				              <p class="mb-4">Helping to develop a website and app for the Fashion Fabricator has shown me how important it is to understand layouts and UI/UX design.</p>
+				              <h3 class="mb-4" id="librarymanagementsystem"><a href="project-library-managment-system-blog.html">Library Management System</a></h3>
+				              <p class="mb-4"> Learn how to create tables, as well as insert, update, delete, and verify data for data types and constraints used in SQLite.</p>
 								<!-- Authors Info -->
 								<div class="author mb-4 d-flex align-items-center">
 									<a href="index.html" class="img" style="background-image: url(images/ocean.jpg);"></a>
