--- a/blog-Projects.html
+++ b/blog-Projects.html
@@ -180,7 +180,7 @@
 							<!-- Second Blog -->
 			    			<div class="col-md-6">
 			    				<div class="blog-entry ftco-animate">
-										<a href="#" class="img img-2" style="background-image: url(images/books.jpg);"></a>
+										<a href="project-library-managment-system-blog.html" class="img img-2" style="background-image: url(images/books.jpg);"></a>
 										<div class="text text-2 pt-2 mt-3">
 											<!-- tag -->
 											<span class="category mb-3 d-block"><a href="blogs-sql.html">SQL</a></span>
@@ -193,7 +193,7 @@
 									<div class="ml-3 info">
 										<span>Written by</span>
 										<h3><a href="index.html"> Carissa O'Connell</a></h3>
-										<p>July 2023</p>
+										<p>May 2024</p>
 									</div>
 								</div>
 				              <div class="meta-wrap align-items-center">
