--- a/blog-Projects.html
+++ b/blog-Projects.html
@@ -128,7 +128,7 @@
 	
 						<li><h12><b>Java Projects</b></h12></li>
 							<ul>
-								<li><h10><a href="#employeemanagmentsystem">Employee Management System</a></h10></li>
+								<li><h10><a href="#javaassignments-class">Java Assignements for Class</a></h10></li>
 							</ul>
 							
 						<li><h12><b>Python Projects</b></h12></li>
@@ -449,6 +449,41 @@
 										<span>Written by</span>
 										<h3><a href="index.html"> Carissa O'Connell</a></h3>
 										<p>Jan 2024</p>
+									</div>
+								</div>
+				              <div class="meta-wrap align-items-center">
+				              	<div class="half order-md-last">
+					              	<p class="meta">
+										<span><i class="glyphicon glyphicon-heart-empty"> </i></span>
+										<span><i class="glyphicon glyphicon-eye-open"> </i></span>
+										<span><i class="glyphicon glyphicon-comment"> </i></span>
+					              	</p>
+				              	</div>
+				              	<div class="half">
+					              	<p><a href="project-fashion-fabricator-blog.html" class="btn py-2">Continue Reading  <span><i class="glyphicon glyphicon-book"></i></span></a></p>
+				              	</div>
+				              </div>
+				            </div>
+							</div>
+			    			</div>
+
+							<!-- Tenth Blog -->
+							<div class="col-md-6">
+			    				<div class="blog-entry ftco-animate">
+										<a href="project-java-assignments-blog.html" class="img img-2" style="background-image: url(images/tech/java-computer.jpg);"></a>
+										<div class="text text-2 pt-2 mt-3">
+											<!-- tag -->
+											<span class="category mb-3 d-block"><a href="blogs-java.html">Java</a></span>
+											<!-- blog title -->
+				              <h3 class="mb-4" id="javaassignments-class"><a href="project-java-assignments-blog.html">Java Assignements for Class</a></h3>
+				              <p class="mb-4">This is a collection of the assignments done in Java during my studies in school.</p>
+								<!-- Authors Info -->
+								<div class="author mb-4 d-flex align-items-center">
+									<a href="index.html" class="img" style="background-image: url(images/ocean.jpg);"></a>
+									<div class="ml-3 info">
+										<span>Written by</span>
+										<h3><a href="index.html"> Carissa O'Connell</a></h3>
+										<p>Dec 2023</p>
 									</div>
 								</div>
 				              <div class="meta-wrap align-items-center">
