--- a/blog01.html
+++ b/blog01.html
@@ -648,10 +648,9 @@
 						<li>Deploy</li>
 					</ol>
 				
-				<p></p>
-				<a href="software-methodology-blog.html">Spiral Development Blog</a> 
-				<p></p>
-				<a href="#methodologies">Back to index of Methodologies</a>
+				<p><a href="software-methodology-blog.html">Spiral Development Blog</a> </p>
+				<p><a href="#methodologies">Back to index of Methodologies</a></p>
+				
 
 				<!-- Fifteenth Point -->
 	            <h8 class="mb-3 mt-5 font-weight-bold" id="continuous">#15 Continuous Development</h8>
