--- a/blog-Projects.html
+++ b/blog-Projects.html
@@ -41,10 +41,9 @@
     <link rel="stylesheet" href="underwater-pure-css-animation/dist/stle.css"> 
 
 	<style>
-		ul {
-  			list-style-type: none;
-		}
-
+		.no-bullets {
+  		list-style-type: none;
+	}
 	</style>
 
   </head>
@@ -106,7 +105,7 @@
 
 			<section class="ftco-section">
 				<h11><b>Projects</b></h11>
-					<ul>
+					<ul class="no-bullets">
 						<li><h12><b>Website Projects</b></h12></li>
 							<ul>
 								<li><h10><a href="#thealohathread">The Aloha Thread</a></h10></li>
@@ -615,6 +614,7 @@
 								  </div>
 			
 							<!-- Tag Cloud -->
+							<!--
 							<div class="sidebar-box ftco-animate">
 							  <h3 class="sidebar-heading">Tag Cloud</h3>
 							  <ul class="categories">
@@ -627,6 +627,7 @@
 								<li><a href="blogs-c++.html">C++<span></span></a></li>
 							  </ul>
 							</div>
+							-->
 			
 							<!-- 
 							<div class="sidebar-box subs-wrap img" style="background-image: url(images/bg_1.jpg);">
