--- a/blog-Projects.html
+++ b/blog-Projects.html
@@ -68,8 +68,8 @@
 						<li><a href="index.html" data-nav-section="skills">Skills</a></li>
 						<li><a href="index.html" data-nav-section="education">Education</a></li>
 						<li><a href="index.html" data-nav-section="experience">Experience</a></li>
-						<li><a href="blog-Projects.html" data-nav-section="projects">Projects</a></li>
-						<li class="active"><a href="blog-MainIndex.html" data-nav-section="blog">Blogs</a></li>
+						<li class="active"><a href="blog-Projects.html" data-nav-section="projects">Projects</a></li>
+						<li><a href="blog-MainIndex.html" data-nav-section="blog">Blogs</a></li>
 					</ul>
 				</div>
 			</nav>
@@ -109,6 +109,7 @@
 						<li><h12><b>Website Projects</b></h12></li>
 							<ul>
 								<li><h10><a href="#thealohathread">The Aloha Thread</a></h10></li>
+								<li><h10><a href="#darktimbercustomknives">Dark Timber Custom Knives</a></h10></li>
 							</ul>
 	
 						<li><h12><b>Mobile App Projects</b></h12></li>
@@ -182,7 +183,43 @@
 				        </div>
 					</div>
 			    </div>
+
 							<!-- Second Blog -->
+			    			<div class="col-md-6">
+			    				<div class="blog-entry ftco-animate">
+										<a href="project-dark-timber-custom-knives.html" class="img img-2" style="background-image: url(images/project-photos/dark-timber-logo.jpeg);"></a>
+										<div class="text text-2 pt-2 mt-3">
+											<!-- tag -->
+											<span class="category mb-3 d-block"><a href="blogs-web-development.html">Webiste</a></span>
+											<!-- blog title -->
+				              <h3 class="mb-4" id="darktimbercustomknives"><a href="project-dark-timber-custom-knives.html">Dark Timber Custom Knives</a></h3>
+				              <p class="mb-4">When designing a website for a bladesmith, it's essential to create a portfolio that showcases their exceptional craftsmanship and attention to detail.</p>
+								<!-- Authors Info -->
+								<div class="author mb-4 d-flex align-items-center">
+									<a href="index.html" class="img" style="background-image: url(images/ocean.jpg);"></a>
+									<div class="ml-3 info">
+										<span>Written by</span>
+										<h3><a href="index.html"> Carissa O'Connell</a></h3>
+										<p>June 2024</p>
+									</div>
+								</div>
+				              <div class="meta-wrap align-items-center">
+				              	<div class="half order-md-last">
+					              	<p class="meta">
+										<span><i class="glyphicon glyphicon-heart-empty"> </i></span>
+										<span><i class="glyphicon glyphicon-eye-open"> </i></span>
+										<span><i class="glyphicon glyphicon-comment"> </i></span>
+					              	</p>
+				              	</div>
+				              	<div class="half">
+					              	<p><a href="project-fashion-fabricator-blog.html" class="btn py-2">Continue Reading  <span><i class="glyphicon glyphicon-book"></i></span></a></p>
+				              	</div>
+				              </div>
+				            </div>
+						</div>
+			    	</div>
+
+							<!-- Third Blog -->
 			    			<div class="col-md-6">
 			    				<div class="blog-entry ftco-animate">
 										<a href="project-library-managment-system-blog.html" class="img img-2" style="background-image: url(images/books.jpg);"></a>
@@ -214,10 +251,10 @@
 				              	</div>
 				              </div>
 				            </div>
-							</div>
-			    			</div>
+						</div>
+			    	</div>
 
-							<!-- Third Blog -->
+							<!-- Fourth Blog -->
 			    			<div class="col-md-6">
 			    				<div class="blog-entry ftco-animate">
 										<a href="project-electronics-store-blog.html" class="img img-2" style="background-image: url(images/tech/electronics-store.jpg);"></a>
@@ -249,10 +286,10 @@
 				              	</div>
 				              </div>
 				            </div>
-							</div>
-			    			</div>
+						</div>
+			    	</div>
 
-							<!-- Fourth Blog -->
+							<!-- Fifth Blog -->
 							<div class="col-md-6">
 			    				<div class="blog-entry ftco-animate">
 										<a href="project-data-structures-algorithms.html" class="img img-2" style="background-image: url(images/tech/data-economy.jpg);"></a>
@@ -284,10 +321,10 @@
 				              	</div>
 				              </div>
 				            </div>
-							</div>
-			    			</div>
+						</div>
+			    	</div>
 
-							<!-- Fifth Blog -->
+							<!-- Sixth Blog -->
 							<div class="col-md-6">
 			    				<div class="blog-entry ftco-animate">
 										<a href="project-coffee-machine-python-blog.html" class="img img-2" style="background-image: url(images/project-photos/coffee.jpg);"></a>
@@ -322,11 +359,11 @@
 				              	</div>
 				              </div>
 				            </div>
-							</div>
-			    			</div>
+						</div>
+			    	</div>
 
 			    			
-							<!-- Sixth Blog -->
+							<!-- Seventh Blog -->
 							<div class="col-md-6">
 			    				<div class="blog-entry ftco-animate">
 										<a href="project-antique-games-blog.html" class="img img-2" style="background-image: url(images/board-games.jpg);"></a>
@@ -359,10 +396,10 @@
 				              	</div>
 				              </div>
 				            </div>
-							</div>
-			    			</div>
+						</div>
+			    	</div>
 			    			
-							<!-- Seventh Blog -->
+							<!-- Eighth Blog -->
 							<div class="col-md-6">
 			    				<div class="blog-entry ftco-animate">
 										<a href="#" class="img img-2" style="background-image: url(images/magic-book.JPG);"></a>
@@ -392,8 +429,8 @@
 				              	</div>
 				              </div>
 				            </div>
-							</div>
-			    			</div>
+						</div>
+			    	</div>
 
 					<!--On going Projects-->
                     <h11><b>On going Projects</b></h11>
