--- a/project-dark-timber-custom-knives.html
+++ b/project-dark-timber-custom-knives.html
@@ -105,7 +105,7 @@
 	    		<div class="row">
 	    			<div class="col-lg-8 ftco-animate">
                         <img src="images/project-photos/dark-timber-logo.jpeg" alt="books" class="img-fluid">
-	            		<h8 class="mb-3 font-weight-bold">Dark Timber Custom Knives Website</h8>
+	            		<p><h8 class="mb-3 font-weight-bold">Dark Timber Custom Knives Website</h8></p>
 
 					<p>Written by</p>
 					<h3><a href="index.html"> Carissa O'Connell</a></h3>
