--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 					               	<h2>Freelance Software Developer <span>2022-Present</span></h2>
 					                  <p>Assist customers in the development of thier websites, developing functions, and designing programs.</p>
 									<ul>
-										<li>Deveop layouts for websites.</li>
+										<li>Develop websites specific to the needs of the client and their users.</li>
 										<li>Brainstorm ideas for programs.</li>
 										<li>Construct data structure functions.</li>
 										<li>Familiarize myself with UI/UX methods</li>
