--- a/blog01.html
+++ b/blog01.html
@@ -686,8 +686,8 @@
 	            <!-- Blog tags -->
 				<div class="tag-widget post-tag-container mb-5 mt-5">
 	              <div class="tagcloud">
-	                <a href="software-blogs.html" class="tag-cloud-link">Software</a>
-					<a href="system-managment-blogs.html" class="tag-cloud-link">System Managment</a>
+	                <a href="blogs-software.html" class="tag-cloud-link">Software</a>
+					<a href="blogs-system-managment.html" class="tag-cloud-link">System Managment</a>
 	              </div>
 	            </div>
 	            
