--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
-											<h1>Data Structures</h1>
+											<h1>Data Structures and Algorithms</h1>
 												<p><a class="btn btn-primary btn-learn" href="https://github.com/carissaoconnell/Data-Structures">View Github Data Structures <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
@@ -541,7 +541,7 @@
 					               </div>
 					               <div class="timeline-label">
 					               	<h2>Freelance Software Developer <span>2022-Present</span></h2>
-					                  <p>Assist customers in the development of thier websites, developing functions, and designing programs.</p>
+					                  <p>Assist customers in the development of their websites, developing functions, and designing programs.</p>
 									<ul>
 										<li>Develop websites specific to the needs of the client and their users.</li>
 										<li>Brainstorm ideas for programs.</li>
