--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 						<li><a href="#" data-nav-section="services">Craftmanship</a></li>
 						<li><a href="#" data-nav-section="skills">Skills</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
+						<li><a href="#" data-nav-section="achievements">Achievements</a></li>
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
 						<li><a href="#" data-nav-section="work">Projects</a></li>
 						<li><a href="#" data-nav-section="blog">Blogs</a></li>
@@ -283,7 +284,7 @@
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">My Skills</span>
-							<h2 class="colorlib-heading animate-box">Areas of Experience</h2>
+							<h2 class="colorlib-heading animate-box">Areas of Expertise</h2>
 						</div>
 					</div>
 					<div class="row">
@@ -501,6 +502,108 @@
 				</div>
 			</section>
 
+			<section class="colorlib-achievements" data-section="achievements">
+				<div class="colorlib-narrow-content">
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+							<span class="heading-meta">Achievements</span>
+							<h2 class="colorlib-heading animate-box">Badges and Certificates</h2>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+				         <div class="timeline-centered">
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+
+					               <div class="timeline-icon color-1">
+					                  <i class="icon-fire2"></i>
+					               </div>
+					               <div class="timeline-label">
+					                  <h2>Microsoft</h2>
+					                <ul>
+										<li><a href="https://learn.microsoft.com/api/achievements/share/en-us/CarissaOConnell-4613/458622GK?sharingId=F4C8AF032C1CB7A9">Build an AI copilot with vCore-based Azure Cosmos DB for MongoDB and Azure OpenAI Completed on 5/30/24</a></li>
+									</ul>
+					               </div>
+					            </div>
+					         </article>
+
+
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-2">
+					                  <i class="icon-fire2"></i>
+					               </div>
+					               <div class="timeline-label">
+					               	<h2>Oracle</h2>
+									<ul>
+										<li>Oracle Cloud Data Management 2023 Foundations Associate - in progress</li>
+									</ul>
+					               </div>
+					            </div>
+					         </article>
+
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-3">
+					                  <i class="icon-fire2"></i>
+					               </div>
+					               <div class="timeline-label">
+					               	<h2>Hyperskill</h2>
+									<ul>
+										<li>SQL for Backend Developers</li>
+										<li>Databases with SQL and Python - in progress</li>
+									</ul>
+					               </div>
+					            </div>
+					         </article>
+
+							 <!-- 
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInTop">
+					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-4">
+					                  <i class="icon-pen2"></i>
+					               </div>
+					               <div class="timeline-label">
+					               	<h2>Caregiver </h2>
+									<ul>
+										<li>Communicated with a team of nurses of my mother-in-law’s condition and medication schedule.</li>
+									</ul>
+					               </div>
+					            </div>
+					         </article>
+
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-5">
+					                  <i class="icon-pen2"></i>
+					               </div>
+					               <div class="timeline-label">
+					               	<h2>Ross Dress for Less</h2>
+									<ul>
+										<li>Demonstrated courtesy, friendliness, and professionalism at all times.</li>
+									</ul>
+									<p>Achievements:</p>
+									<ul>
+										<li>Earned “Associate of the Month” in October 2019 – for preventing a theft by providing service to the customer</li>
+									</ul>
+					               </div>
+					            </div>
+					         </article>
+							 -->
+
+					         <article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
+					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-none">
+					               </div>
+					            </div>
+					         </article>
+					      </div>
+					   </div>
+				   </div>
+				</div>
+			</section>
+
 			<section class="colorlib-experience" data-section="experience">
 				<div class="colorlib-narrow-content">
 					<div class="row">
@@ -543,11 +646,12 @@
 					               	<h2>Freelance Software Developer <span>2022-Present</span></h2>
 					                  <p>Assist customers in the development of their websites, developing functions, and designing programs.</p>
 									<ul>
-										<li>Develop websites specific to the needs of the client and their users.</li>
-										<li>Brainstorm ideas for programs.</li>
-										<li>Construct data structure functions.</li>
-										<li>Familiarize myself with UI/UX methods</li>
-										<li>Create wireframes for mobile programs</li>
+										<li>Collaborated with clients to understand their unique needs and goals, and developed tailored solutions to enhance their online presence and program offerings.</li>
+										<li>Designed and built custom websites that catered to the specific requirements of clients and their target audiences, ensuring a seamless user experience and optimal functionality.</li>
+										<li>Facilitated brainstorming sessions with clients to generate innovative ideas for programs, identifying opportunities to drive engagement, improve efficiency, and increase revenue.</li>
+										<li>Developed robust data structure functions to support the backend of client programs, ensuring data integrity, scalability, and performance.</li>
+										<li>Stayed up-to-date with the latest UI/UX design principles and methodologies, applying this knowledge to create intuitive and visually appealing interfaces that met the needs of diverse user groups.</li>
+										<li>Created detailed wireframes for mobile programs, providing a clear visual representation of the user interface and user experience, and guiding the development process to ensure a high-quality final product.</li>
 									</ul>
 					               </div>
 					            </div>
