--- a/index.html
+++ b/index.html
@@ -537,8 +537,19 @@
 					               <div class="timeline-label">
 					               	<h2>Oracle</h2>
 									<ul>
-										<li>Oracle Cloud Data Management 2023 Foundations Associate - in progress</li>
+
+										<div class="progress-wrap">
+											<h3>Oracle Cloud Data Management 2023 Foundations Associate</h3>
+											<div class="progress">
+												 <div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
+												  aria-valuemin="0" aria-valuemax="100" style="width:85%">
+												<span>85%</span>
+												  </div>
+											</div>
+										</div>
+
 									</ul>
+
 					               </div>
 					            </div>
 					         </article>
@@ -552,7 +563,17 @@
 					               	<h2>Hyperskill</h2>
 									<ul>
 										<li>SQL for Backend Developers</li>
-										<li>Databases with SQL and Python - in progress</li>
+
+										<div class="progress-wrap">
+											<h3>Databases with SQL and Python </h3>
+											<div class="progress">
+												 <div class="progress-bar color-3" role="progressbar" aria-valuenow="65"
+												  aria-valuemin="0" aria-valuemax="100" style="width:65%">
+												<span>65%</span>
+												  </div>
+											</div>
+										</div>
+
 									</ul>
 					               </div>
 					            </div>
