--- a/index.html
+++ b/index.html
@@ -527,9 +527,9 @@
 										<div class="progress-wrap">
 											<p><h3>Microsoft Build: Build multimodal Generative AI experiences</h3></p>
 											<div class="progress">
-												 <div class="progress-bar color-1" role="progressbar" aria-valuenow="45"
-												  aria-valuemin="0" aria-valuemax="100" style="width:45%">
-												<span>45%</span>
+												 <div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
+												  aria-valuemin="0" aria-valuemax="100" style="width:75%">
+												<span>75%</span>
 												
 												  </div>
 											</div>
@@ -574,7 +574,7 @@
 					               <div class="timeline-label">
 					               	<h2>Hyperskill</h2>
 									<ul>
-											<li>SQL for Backend Developers</li>
+											<li>SQL for Backend Developers - Completed on 6/2024</li>
 
 										<div class="progress-wrap">
 											<p><h3>Databases with SQL and Python</h3></p>
