--- a/project-dark-timber-custom-knives.html
+++ b/project-dark-timber-custom-knives.html
@@ -117,6 +117,17 @@
 						unique handcrafted knives, and appeals to outdoor enthusiasts and collectors.
                     </p>
 
+					<p>In this exciting project, I have the privilege of working alongside Peter Kohler, a skilled bladesmith, 
+						to design and develop his very first website from scratch. 
+						Together, we are embarking on a collaborative journey to craft a digital presence that not only 
+						showcased Peter's exceptional professional skills but also reflects his passion for bladesmithing. 
+						I continue to work closely with Peter to understand his unique needs and goals, ensuring that every 
+						aspect of the website design and development process is tailored to his vision.
+						
+						Through open communication, creative problem-solving, and a deep understanding of Peter's craft, 
+						we are working on creating a website that truly embodies the essence of his brand - <h10><a href="https://peterkohlerportfolio.github.io/darktimbercustomknives.github.io/">Dark Timber Custom Knives</a></h10>. 
+					</p>
+
 					<h9>Design Requirements:</h9>
 						<ul>
 							<li>Simple, clean, and to the point: A minimalistic design that allows the bladesmith's work to take center stage</li>
@@ -125,7 +136,7 @@
 							<li>Personal touch: Include a brief story or description about the bladesmith's inspiration, process, and passion for their craft</li>
 						</ul>
 
-					<p>Learing how to help a bladesmith promote their work and story has taught me how to design a website that makes it easy, simple, and appealing for people who dont utilize the web often.</p>
+					<p>Learning how to help a bladesmith promote their work and story has taught me how to design a website that makes it easy, simple, and appealing for people who dont utilize the web often.</p>
                     
 					<p>Check out the website <h10><a href="https://peterkohlerportfolio.github.io/darktimbercustomknives.github.io/">Dark Timber Custom Knives!</a></h10>.
 					</p>
