--- a/blog-Projects.html
+++ b/blog-Projects.html
@@ -435,7 +435,7 @@
 							<!-- Eighth Blog -->
 							<div class="col-md-6">
 			    				<div class="blog-entry ftco-animate">
-										<a href="#" class="img img-2" style="background-image: url(images/magic-book.JPG);"></a>
+										<a href="project-word-wizard-blog.html" class="img img-2" style="background-image: url(images/magic-book.JPG);"></a>
 										<div class="text text-2 pt-2 mt-3">
 											<span class="category mb-3 d-block"><a href="blogs-web-development.html">Web Development</a></span>
 				              <h3 class="mb-4" id="wordwizard"><a href="project-word-wizard-blog.html">Word Wizard</a></h3>
