--- a/project-word-wizard-blog.html
+++ b/project-word-wizard-blog.html
@@ -120,6 +120,13 @@
 						which is displayed for the user to move around to create poems, sentences, and short stories.
 					</p>
 
+					<p><center><img src="images/project-photos/word-wizard/main-page.png" alt="word wizard" class="img-fluid" width="200" height="300"</center>></p>
+
+					<p><img src="images/project-photos/word-wizard/choices-view.png" alt="word wizard choices view" class="img-fluid" width="200" height="300"></p>
+
+					<p><img src="images/project-photos/word-wizard/loading-view.gif" alt="word wizard loading view" class="img-fluid" width="200" height="300"></p>
+
+					<p><img src="images/project-photos/word-wizard/saved-goodies.png" alt="word wizard saved goodies view" class="img-fluid" width="200" height="300"></p>
                     
 					<!-- End Blog -->
 	            
