--- a/project-word-wizard-blog.html
+++ b/project-word-wizard-blog.html
@@ -116,8 +116,9 @@
 						to play on words.
                     </p>
 
-					<p>The program uses a database of words and uploads a random set from each category of words, that have been indexed, 
-						which is displayed for the user to move around to create poems, sentences, and short stories.
+					<p>The program takes in the users input from the list of choices as well as allowing the user to enter in their own specifications.
+						The information is then feed to the AI, and the AI outputs the reading material the user had choosen. The reading material is saved
+						in the program to allow the user to go back to the reading material they had created and allows the user to share the literature. 
 					</p>
 
 					<p><center><img src="images/project-photos/word-wizard/main-page.png" alt="word wizard" class="img-fluid" width="200" height="300"</center>></p>
