--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
 									<ul>
 
 										<div class="progress-wrap">
-											<h3>Oracle Cloud Data Management 2023 Foundations Associate</h3>
+											<p><h3>Oracle Cloud Data Management 2023 Foundations Associate</h3></p>
 											<div class="progress">
 												 <div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
 												  aria-valuemin="0" aria-valuemax="100" style="width:85%">
