--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 					   		</div>
 				   		</div>
 				   	</li>
-				   	<li style="background-image: url(images/paradise-beach.jpeg);">
+				   	<li style="background-image: url(images/hawaii-beach.jpg);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -120,7 +120,6 @@
 				   	</li>
 				  	</ul>
 			  	</div>
-				<p><a href="https://www.vecteezy.com/free-photos/hawaii-beach">Hawaii Beach Stock photos by Vecteezy</a></p>
 			</section>
 
 
