--- a/project-the-aloha-thread-blog.html
+++ b/project-the-aloha-thread-blog.html
@@ -131,8 +131,8 @@
 				  <!-- Blog tags -->
 				  <div class="tag-widget post-tag-container mb-5 mt-5">
 					<div class="tagcloud">
-					  <a href="software-blogs.html" class="tag-cloud-link">Software</a>
-					  <a href="software-blogs.html" class="tag-cloud-link">Programming</a>
+					  <a href="blogs-software.html" class="tag-cloud-link">Software</a>
+					  <a href="blogs-web-development.html" class="tag-cloud-link">Web Development</a>
 					</div>
 				  </div>
 				  
