--- a/index.html
+++ b/index.html
@@ -808,11 +808,11 @@
 						</div>
 						<!-- Article 2 -->
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/sewing-materials.jpg);">
+							<div class="project" style="background-image: url(images/project-photos/dark-timber-logo.jpeg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="project-fashion-fabricator-blog.html">Fashion Fabricator</a></h3>
-										<span>Apps</span>
+										<h3><a href="project-dark-timber-custom-knives.html">Dark Timber Custom Knives</a></h3>
+										<span>Websites</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> </a></span>
@@ -824,10 +824,10 @@
 						</div>
 						<!-- Article 3 -->
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
-							<div class="project" style="background-image: url(images/board-games.jpg);">
+							<div class="project" style="background-image: url(images/tech/data-economy.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="project-antique-games-blog.html">Antique Games</a></h3>
+										<h3><a href="project-data-structures-algorithms.html">Data Structures and Algorithms</a></h3>
 										<span>Websites / Apps</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
